Refined Auto-Skip feature and UI improvements

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,12 @@
   "name": "Naukri → LinkedIn",
   "version": "1.1",
   "description": "Side panel: filter jobs by experience, track applications, search LinkedIn",
-  "permissions": ["tabs", "scripting", "storage", "sidePanel"],
+  "permissions": [
+    "tabs",
+    "scripting",
+    "storage",
+    "sidePanel"
+  ],
   "host_permissions": [
     "https://www.naukri.com/*",
     "https://naukri.com/*",
@@ -12,8 +17,13 @@
   ],
   "content_scripts": [
     {
-      "matches": ["https://www.naukri.com/*", "https://naukri.com/*"],
-      "js": ["content.js"],
+      "matches": [
+        "https://www.naukri.com/*",
+        "https://naukri.com/*"
+      ],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_idle"
     }
   ],
